--- a/foodrun/src/App.css
+++ b/foodrun/src/App.css
@@ -11,15 +11,35 @@
 .bg-small-pink {
   background-color: "#FF7E70";
 }
-.text-light-pink { color: #FFCCCC; }
+.text-light-pink,
+
 .text-soft-red { color: #FF8080; }
 .text-medium-red,
-.border-medium-red { color: #FF4B4B; }
+
 .text-bright-red { color: #FF0000; }
 .text-orange { color: #FF9F06; }
 .text-pale-pink { color: #FFE9E9; }
+.border-medium-red {
+  border-color: #FF4B4B;
+}
+
+.border-light-red {
+  border-color: #FFCCCC;
+}
+
+.border-bright-red {
+  border-color: #FF0000;
+}
 
 body {
   font-family: 'Nunito';
   display: block;
 }
+
+#recordings button:hover,
+#recordings button:focus,
+#recordings button:focus-visible{
+  border-color: #FF8080;
+  outline: #FF8080;
+}
+
